# CircuitCLI

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_labcorp_sync.py
src/circuitai/: __init__.py  __main__.py
src/circuitai/adapters/: base.py  protocol.py  registry.py
src/circuitai/adapters/builtin/: _template.py  csv_import.py  manual.py  pdf_import.py  plaid_adapter.py
src/circuitai/cli/: accounts.py  activities.py  adapters_cmd.py  add_text.py  bills.py  browse_cmd.py  calendar_cmd.py  capture_cmd.py  cards.py  completer.py  dashboard.py  deadlines.py  export.py  health_cmd.py  integrations_cmd.py  investments.py  main.py  morning.py  mortgage.py  plaid_cmd.py  query.py  repl.py  seed.py  serve_cmd.py  setup.py  subscriptions_cmd.py
src/circuitai/core/: config.py  database.py  encryption.py  exceptions.py  migrations.py
src/circuitai/models/: account.py  activity.py  base.py  bill.py  card.py  category.py  deadline.py  investment.py  lab.py  mortgage.py  subscription.py  tag.py
src/circuitai/output/: formatter.py
src/circuitai/services/: account_service.py  activity_service.py  bill_service.py  browser_service.py  calendar_service.py  capture_service.py  card_service.py  deadline_service.py  file_import_service.py  integration_registry.py  investment_service.py  lab_service.py  morning_service.py  mortgage_service.py  plaid_link_server.py  plaid_service.py  query_service.py  statement_linker.py  subscription_service.py  summary_service.py  text_parser.py  undo_service.py
src/circuitai/services/sites/: __init__.py  base.py  (+2 more)
src/circuitai/tui/: app.py
src/circuitai/web/: __init__.py  app.py  auth.py  dependencies.py  templating.py
tests/: test_bills.py  test_browser.py  test_capture.py  test_cli.py  test_completer.py  test_core.py  test_file_import.py  test_health.py  test_integrations.py  test_models.py  test_plaid.py  test_services.py  test_statement_linker.py  test_subscriptions.py  test_text_parser.py  test_undo.py  test_web.py
(+23 files in other folders)
