[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuitai"
version = "0.1.0"
description = "Local-first, privacy-focused personal finance and productivity CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CircuitAI Contributors" }]
keywords = ["finance", "cli", "privacy", "encrypted", "personal-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.40",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0",
    "keyring>=24.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
crypto = ["sqlcipher3-binary>=0.5"]
calendar = ["caldav>=1.3"]
pdf = ["pdfplumber>=0.9"]
plaid = ["plaid-python>=29.0"]
capture = ["anthropic>=0.40"]
dev = ["ruff", "mypy", "pytest", "pytest-cov"]
all = ["circuitai[crypto,calendar,pdf,plaid,capture,dev]"]

[project.scripts]
circuit = "circuitai.cli.main:cli"

[project.entry-points."circuitai.adapters"]
manual = "circuitai.adapters.builtin.manual:ManualAdapter"
csv-import = "circuitai.adapters.builtin.csv_import:CsvImportAdapter"
pdf-import = "circuitai.adapters.builtin.pdf_import:PdfImportAdapter"
plaid = "circuitai.adapters.builtin.plaid_adapter:PlaidAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/circuitai"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/circuitai/cli/main.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
